crates/shipper-cli/tests/snapshots/e2e_expanded__help_doctor.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stdout)
---
Print environment and auth diagnostics.

Checks local tools, registry reachability, authentication signals, workspace
health, and state-directory basics. Run this first when preflight or publish
reports an environment blocker.

EXAMPLES:
    # Inspect local release prerequisites:
    shipper doctor

    # Check a named Cargo registry:
    shipper doctor --registry crates-io


Usage: shipper-cli doctor [OPTIONS]

Options:
      --config <CONFIG>
          Path to a custom configuration file (.shipper.toml)

      --manifest-path <MANIFEST_PATH>
          Path to the workspace Cargo.toml
          
          [default: Cargo.toml]

      --registry <REGISTRY>
          Cargo registry name (default: crates-io)

      --api-base <API_BASE>
          Registry API base URL (default: <https://crates.io>)

      --allow-loopback
          Permit loopback HTTP for an explicitly configured local test or rehearsal registry. Does not permit private-network destinations

      --package <PACKAGES>
          Restrict to specific packages (repeatable). If omitted, publishes all publishable workspace members

      --state-dir <STATE_DIR>
          Directory for shipper state and receipts (default: .shipper)

      --format <FORMAT>
          Output format: text (default) or json
          
          [default: text]
          [possible values: text, json]

  -q, --quiet
          Suppress informational output

  -h, --help
          Print help (see a summary with '-h')
