crates/shipper-cli/tests/snapshots/e2e_expanded__help_inspect_events.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stdout)
---
View the authoritative event log.

Reads `<state-dir>/events.jsonl`, which is the truth source for publish and
resume state transitions. Use `--follow` while another terminal is running
publish or resume.

EXAMPLES:
    # Print the current event log:
    shipper inspect-events

    # Follow appended events during a release:
    shipper inspect-events --follow


Usage: shipper-cli inspect-events [OPTIONS]

Options:
      --follow
          Follow the authoritative events.jsonl and print appended events as they arrive

      --config <CONFIG>
          Path to a custom configuration file (.shipper.toml)

      --manifest-path <MANIFEST_PATH>
          Path to the workspace Cargo.toml
          
          [default: Cargo.toml]

      --registry <REGISTRY>
          Cargo registry name (default: crates-io)

      --api-base <API_BASE>
          Registry API base URL (default: <https://crates.io>)

      --package <PACKAGES>
          Restrict to specific packages (repeatable). If omitted, publishes all publishable workspace members

      --state-dir <STATE_DIR>
          Directory for shipper state and receipts (default: .shipper)

      --format <FORMAT>
          Output format: text (default) or json
          
          [default: text]
          [possible values: text, json]

      --verbose
          Show detailed dependency analysis for plan command

  -q, --quiet
          Suppress informational output

  -h, --help
          Print help (see a summary with '-h')
