crates/shipper-cli/tests/snapshots/e2e_expanded__help_inspect_receipt.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stdout)
---
View the end-of-run receipt with evidence.

Reads `<state-dir>/receipt.json` and prints the completed release summary,
package outcomes, git context, environment fingerprint, and captured evidence.

EXAMPLES:
    # Print the human-readable release receipt:
    shipper inspect-receipt

    # Emit the receipt in JSON for CI or an internal developer portal:
    shipper inspect-receipt --format json


Usage: shipper-cli inspect-receipt [OPTIONS]

Options:
      --config <CONFIG>
          Path to a custom configuration file (.shipper.toml)

      --manifest-path <MANIFEST_PATH>
          Path to the workspace Cargo.toml
          
          [default: Cargo.toml]

      --registry <REGISTRY>
          Cargo registry name (default: crates-io)

      --api-base <API_BASE>
          Registry API base URL (default: <https://crates.io>)

      --allow-loopback
          Permit loopback HTTP for an explicitly configured local test or rehearsal registry. Does not permit private-network destinations

      --package <PACKAGES>
          Restrict to specific packages (repeatable). If omitted, publishes all publishable workspace members

      --state-dir <STATE_DIR>
          Directory for shipper state and receipts (default: .shipper)

      --format <FORMAT>
          Output format: text (default) or json
          
          [default: text]
          [possible values: text, json]

      --verbose
          Show detailed dependency analysis for plan command

  -q, --quiet
          Suppress informational output

  -h, --help
          Print help (see a summary with '-h')
