crates/shipper-cli/tests/snapshots/e2e_expanded__help_plan.snap
---
source: crates/shipper-cli/tests/e2e_expanded.rs
expression: normalize_stderr(&stdout)
---
Print the deterministic publish plan (dependency-first ordering).

Reads the workspace via `cargo metadata`, filters publishable crates,
topologically sorts them, and prints the order in which they will be
published. The plan is deterministic — the same workspace produces the
same plan ID on any machine — which is the anchor that makes `resume`
safe.

EXAMPLES:
    # Preview the publish order for every publishable workspace member:
    shipper plan

    # Plan with dependency-level breakdown (who can publish in parallel):
    shipper plan --verbose


Usage: shipper-cli plan [OPTIONS]

Options:
      --config <CONFIG>
          Path to a custom configuration file (.shipper.toml)

      --manifest-path <MANIFEST_PATH>
          Path to the workspace Cargo.toml
          
          [default: Cargo.toml]

      --registry <REGISTRY>
          Cargo registry name (default: crates-io)

      --api-base <API_BASE>
          Registry API base URL (default: <https://crates.io>)

      --allow-loopback
          Permit loopback HTTP for an explicitly configured local test or rehearsal registry. Does not permit private-network destinations

      --package <PACKAGES>
          Restrict to specific packages (repeatable). If omitted, publishes all publishable workspace members

      --state-dir <STATE_DIR>
          Directory for shipper state and receipts (default: .shipper)

      --format <FORMAT>
          Output format: text (default) or json
          
          [default: text]
          [possible values: text, json]

      --verbose
          Show detailed dependency analysis for plan command

  -q, --quiet
          Suppress informational output

  -h, --help
          Print help (see a summary with '-h')
